Favicon added to site and background colour amended

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="icon" type="image/png" href="static/image/belles-favicon.PNG" />
     {% block styles %}
     {% endblock %}
     <title>Belles' Task Manager</title>
