--- a/templates/homework.html
+++ b/templates/homework.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2>Homework Tasks</h2>
+    <h2 class="center-align grey-text text-darken-2">Homework Tasks</h2>
     {% for homework in homework %}
         {{ homework.section_name }}<br>
         {{ homework.song_name }}<br>
