Registration page and template added

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="icon" type="image/png" href="static/image/belles-favicon.PNG" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
     {% block styles %}
     {% endblock %}
     <title>Belles' Task Manager</title>
@@ -25,11 +27,13 @@
                 <a href="#!" class="brand-logo pink-text text-accent-1 text-shadow">Belles' Homework Manager</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#" class="pink-text text-accent-1 text-shadow">Home</a></li>
-                    <li><a href="#" class="pink-text text-accent-1 text-shadow">Add Task</a></li>
-                    <li><a href="#" class="pink-text text-accent-1 text-shadow">View Tasks</a></li>
-                    <li><a href="#" class="pink-text text-accent-1 text-shadow">Log Out</a></li>
-                  
+                    <li><a href="#" class="text-shadow"><i class="far fa-calendar-alt"></i>  View Calendar</a></li>
+                    <li><a href="#" class="text-shadow"><i class="far fa-calendar-alt"></i>  Add Task</a></li>
+                    <li><a href="{{ url_for('show_tasks') }}" class="text-shadow"><i class="fas fa-list"></i>  View Tasks</a></li>
+                    <li><a href="#" class="text-shadow"><i class="fas fa-list"></i>  Log In</a></li>
+                    <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
+                    <li><a href="#" class="text-shadow"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
+                                      
                 </ul>
             </div>
         </nav>
@@ -37,11 +41,15 @@
         <!-- mobile navbar -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align pink-text text-accent-2">Belles' Homework Manager</h4></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Add Task</a></li>
-            <li><a href="#">View Tasks</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="#"><i class="far fa-calendar-alt"></i>View Calendar</a></li>
+            <li><a href="#"><i class="fas fa-plus"></i>Add Task</a></li>
+            <li><a href="{{ url_for('show_tasks') }}"><i class="fas fa-list"></i>View Tasks</a></li>
+            <li><a href="#"><i class="fas fa-list"></i>Log In</a></li>
+            <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
+            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
         </ul>
+
+        
 
     </header>
 
