--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,5 +3,13 @@ body {
 }
 
 .text-shadow {
-    text-shadow: 2px 2px 2px rgba(33, 33, 33, 0.7);
+    text-shadow: 3px 3px 3px rgba(33, 33, 33, 0.7)
+}
+
+.brand-logo {
+    font-family: "niconne", cursive;
+}
+
+.registration-form-header {
+    color: #424242;
 }
