--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <link rel="icon" type="image/png" href="static/image/belles-favicon.PNG" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Niconne&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+      integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
+      crossorigin="anonymous" />
     {% block styles %}
     {% endblock %}
     <title>Belles' Task Manager</title>
@@ -45,7 +49,7 @@
             <li><a href="#"><i class="fas fa-plus"></i>Add Task</a></li>
             <li><a href="{{ url_for('show_tasks') }}"><i class="fas fa-list"></i>View Tasks</a></li>
             <li><a href="#"><i class="fas fa-list"></i>Log In</a></li>
-            <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
+            <li><a href="{{ url_for('register') }}"><i class="fas fa-list"></i>  Register</a></li>
             <li><a href="#"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
         </ul>
 
