--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f7edf7;
+    background-color: #edeef0;
     font-family: 'Lato', sans-serif;
 }
 
@@ -9,6 +9,7 @@ body {
 
 .brand-logo {
     font-family: "niconne", cursive;
+    margin-left: 15px;
 }
 
 .sidenav {
@@ -36,6 +37,11 @@ header a:hover {
     border-radius: 10px;
 }
 
+.submit-button:hover {
+    color: #424242;
+    transform: scale(1.1);
+}
+
 .registration-bottom-link {
     background-color: #fff8ff;
     border-radius: 10px;
@@ -51,4 +57,19 @@ header a:hover {
 .registration-bottom-link a:hover {
 	color: #4d4455;
 	text-decoration: underline;
+}
+
+.input-field {
+    border-color: #4d4455;
+    background-color: white;
+    border-radius: 20px;
+    border-width: 1px;
+    border-style:solid;
+}
+
+
+/* Flashes */
+
+.flashes h4 {
+    line-height: 2;
 }
