--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                     <li><a href="#" class="text-shadow"><i class="far fa-calendar-alt"></i>  View Calendar</a></li>
                     <li><a href="#" class="text-shadow"><i class="far fa-calendar-alt"></i>  Add Task</a></li>
                     <li><a href="{{ url_for('show_tasks') }}" class="text-shadow"><i class="fas fa-list"></i>  View Tasks</a></li>
-                    <li><a href="#" class="text-shadow"><i class="fas fa-list"></i>  Log In</a></li>
+                    <li><a href="{{ url_for('login') }}" class="text-shadow"><i class="fas fa-list"></i>  Log In</a></li>
                     <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
                     <li><a href="#" class="text-shadow"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
                                       
@@ -48,7 +48,7 @@
             <li><a href="#"><i class="far fa-calendar-alt"></i>View Calendar</a></li>
             <li><a href="#"><i class="fas fa-plus"></i>Add Task</a></li>
             <li><a href="{{ url_for('show_tasks') }}"><i class="fas fa-list"></i>View Tasks</a></li>
-            <li><a href="#"><i class="fas fa-list"></i>Log In</a></li>
+            <li><a href="{{ url_for('login') }}"><i class="fas fa-list"></i>Log In</a></li>
             <li><a href="{{ url_for('register') }}"><i class="fas fa-list"></i>  Register</a></li>
             <li><a href="#"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
         </ul>
