--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align registration-form-header">Register New User</h3>
+<h3 class="center-align registration-form-header">Log In</h3>
 
 <div class="row">
-    <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for ('register') }}">
+    <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for ('login') }}">
         <div class="card-panel registration-form">
             <!-- Enter Name -->
             <div class="row">
@@ -27,9 +27,9 @@
                 </div>
             </div>
 
-            <!--Register User Button-->
+            <!--Log In Button-->
             <div class="row">
-                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 text-shadow submit-button">Register</button>
+                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 text-shadow submit-button">Log in</button>
             </div>
         </div>
     </form>
@@ -37,7 +37,7 @@
 
  <div class="row">
       <div class="card-panel col s6 offset-s3 m4 offset-m4 lg2 offset-lg5 registration-bottom-link">
-        <p>Already registered? Please <a href="{{ url_for('login') }}">Log In</a></p>
+        <p>Need to register? Please <a href="{{ url_for('register') }}">click here</a></p>
         
       </div>
     </div>
