--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="text-center">Calendar of Events</h2>
-
-    <iframe src="https://calendar.google.com/calendar/embed?src=rsherlock2308%40gmail.com&ctz=Europe%2FLondon" 
-        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-
-    {% endfor %} 
-    
+    <h2 class="center-align page-title">Calendar of Events</h2>
+    <div class="center-align">
+        <iframe src="https://calendar.google.com/calendar/embed?src=rsherlock2308%40gmail.com&ctz=Europe%2FLondon" 
+            style="border: 0" width="800" height="600" frameborder="0" scrolling="no" center-align></iframe>
+    </div>
+        
 {% endblock %}
