--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align registration-form-header">Register New User</h3>
+<h3 class="center-align page-title">Register New User</h3>
 
 <div class="row">
     <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for ('register') }}">
