--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('calendar') }}" class="text-shadow"><i class="far fa-calendar-alt"></i>  View Calendar</a></li>
-                    <li><a href="#" class="text-shadow"><i class="far fa-calendar-alt"></i>  Add Task</a></li>
+                    <li><a href="#" class="text-shadow"><i class="fas fa-plus"></i>  Add Task</a></li>
                     <li><a href="{{ url_for('show_tasks') }}" class="text-shadow"><i class="fas fa-list"></i>  View Tasks</a></li>
                     <li><a href="{{ url_for('login') }}" class="text-shadow"><i class="fas fa-list"></i>  Log In</a></li>
                     <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
