--- a/templates/homework.html
+++ b/templates/homework.html
@@ -1,13 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="center-align grey-text text-darken-2">Homework Tasks</h2>
-    {% for homework in homework %}
-        {{ homework.section_name }}<br>
-        {{ homework.song_name }}<br>
-        {{ homework.task_description }}<br>
-        {{ homework.due_date }}<br>
+    <h3 class="center-align page-title">Homework Tasks</h3>
+    
+    <div class="row">
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Music Team
+            </div></a>
+        </div>
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Whole Chorus
+            </div></a>
+        </div>
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Tenor Section
+            </div></a>
+        </div>
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Lead Section
+            </div></a>
+        </div>
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Bari Section
+            </div></a>
+        </div>
+        <div class="col s12 m6 l4">
+            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+                Bass Section
+            </div></a>
+        </div>
+        
+    </div>
+    
+  
 
-    {% endfor %} 
+
     
 {% endblock %}
