--- a/templates/homework.html
+++ b/templates/homework.html
@@ -5,32 +5,32 @@
     
     <div class="row">
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Music Team
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Whole Chorus
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Tenor Section
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Lead Section
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Bari Section
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 text-shadow section-link">
+            <a href="#"><div class="card-panel pink accent-1 section-link">
                 Bass Section
             </div></a>
         </div>
