--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,14 @@
         <!-- mobile navbar -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align pink-text text-accent-2">Belles' Homework Manager</h4></li>
-            <li><a href="{{ url_for('login') }}"><i class="fas fa-list"></i>Log In</a></li>
+            
             {% if session.user %}                    
-                    <li><a href="#" class="text-shadow"><i class="fas fa-plus"></i>  Add Task</a></li>
-                    <li><a href="{{ url_for('show_tasks') }}" class="text-shadow"><i class="fas fa-list"></i>  View Tasks</a></li>
+                    <li><a href="#"><i class="fas fa-plus"></i>  Add Task</a></li>
+                    <li><a href="{{ url_for('show_tasks') }}"><i class="fas fa-list"></i>  View Tasks</a></li>
+                    <li><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
                 {% else %}
-                    <li><a href="{{ url_for('register') }}" class="text-shadow"><i class="fas fa-list"></i>  Register</a></li>
-                    <li><a href="{{ url_for('logout') }}" class="text-shadow"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
+                    <li><a href="{{ url_for('register') }}"><i class="fas fa-user-plus"></i>  Register</a></li>
+                    <li><a href="{{ url_for('login') }}"><i class="fas fa-user"></i>Log In</a></li>
                 {% endif %}
         </ul>
 
