--- a/templates/homework.html
+++ b/templates/homework.html
@@ -20,7 +20,7 @@
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('show_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Lead Section
             </div></a>
         </div>
@@ -37,7 +37,7 @@
         
     </div>
     
-  
+ 
 
 
     
