--- a/templates/leads.html
+++ b/templates/leads.html
@@ -3,12 +3,27 @@
 
     <h3 class="center-align page-title">Leads Tasks</h3>
     
-    {% for homework in homework %}
+  {% for homework in homework %}
         {{ homework.section_name }}<br>
         {{ homework.song_name }}<br>
         {{ homework.task_description }}<br>
         {{ homework.due_date }}<br>
 
     {% endfor %} 
+
+    <ul class="collapsible">
+    <li>
+      <div class="collapsible-header white-text pink accent-1"><i class="fas fa-caret-down"></i>First</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header white-text pink accent-1"><i class="fas fa-caret-down"></i>Second</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header white-text pink accent-1"><i class="fas fa-caret-down"></i>Third</div>
+      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+    </li>
+</ul>  
     
 {% endblock %}
