--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,22 @@ header a:hover {
 }
 
 
+/* Section task pages */
+
+.card {
+    margin-top: 20px;
+    height: 300px;
+    
+}
+
+.task-title {
+    font-size: 20px !important;
+}
+
+.task-description {
+    font-size: 15px !important;
+}
+
 /* Media Queries */
 
 @media screen and (max-width: 1393px) {
