--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 <div class="row">
     <form class="col s12 m10 offset-m1" method="POST" action="{{ url_for ('register') }}">
         <div class="card-panel registration-form">
-            <!-- Enter Name -->
+            <!-- Enter Username -->
             <div class="row">
                 <div class="input-field col s10 offset-s1">
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
