--- a/templates/leads.html
+++ b/templates/leads.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h3 class="center-align page-title">Leads' Tasks</h3>
-<div class="center-align">All tasks have been set by either Lucy or your section lead, click on the song title for more info. Please give us a shout if there's
+<div class="center-align">All tasks have been set by either Lucy or your section lead, just click on the song title for more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
 
