--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
 
             <!-- Enter Password -->
             <div class="row">
-                <div class="input-field col s10 offset-s1">
+                <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-lock prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15" 
                         pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password (minimum 5 characters)" required>
