--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 <ul class="right hide-on-med-and-down">
                     
                     {% if session.user %}
-                        <li><a href="#" class="text-shadow"><i class="fas fa-plus"></i>  Add Task</a></li>
+                        <li><a href="{{ url_for('add_task') }}" class="text-shadow"><i class="fas fa-plus"></i>  Add Task</a></li>
                         <li><a href="{{ url_for('homework') }}" class="text-shadow"><i class="fas fa-list"></i>  View Tasks</a></li>
                         <li><a href="{{ url_for('logout') }}" class="text-shadow"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
                     {% else %}
@@ -48,7 +48,7 @@
             <li><h4 class="center-align pink-text text-accent-2">Belles' Homework Manager</h4></li>
             
             {% if session.user %}                    
-                    <li><a href="#"><i class="fas fa-plus"></i>  Add Task</a></li>
+                    <li><a href="{{ url_for('add_task') }}"><i class="fas fa-plus"></i>  Add Task</a></li>
                     <li><a href="{{ url_for('homework') }}"><i class="fas fa-list"></i>  View Tasks</a></li>
                     <li><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>  Log Out</a></li>
                 {% else %}
