--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -3,22 +3,38 @@
 
     <h3 class="center-align page-title">Add New Task</h3>
 
-<div class="row">
+<div class="row card-panel add-tasks-form">
     <form class="col s12" method="POST" action="">
-      <div class="row">
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-music prefix pink-text text-accent-1"></i>
+                <input id="song_name" name ="song_name" type="text" class="validate" required>
+                <label for="song_name">Song Name</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
+                <input id="task_title" name ="task_title" type="text" class="validate" required>
+                <label for="task_title">Task Title</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-calendar-alt prefix pink-text text-accent-1"></i>
+                <input id="due_date" name ="due_date" type="text" class="datepicker validate" required>
+                <label for="due_date">Due Date</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-align-left prefix pink-text text-accent-1"></i>
+                <textarea id="task_description" name="task_description" class="materialize-textarea validate" 
+                required></textarea><label for="task_description">Details of Task</label>
+            </div>
+        </div>
         
-        <div class="input-field col s12">
-          <i class="fas fa-user-circle prefix pink-text text-accent-1"></i>
-          <input id="icon_prefix" type="text" class="validate">
-          <label for="icon_prefix">First Name</label>
-        </div>
-        <div class="input-field col s12">
-          <i class="fas fa-phone prefix pink-text text-accent-1"></i>
-          <input id="icon_telephone" type="tel" class="validate">
-          <label for="icon_telephone">Telephone</label>
-        </div>
-      </div>
     </form>
-  </div>
+</div>
 
 {% endblock %}
