--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
         <div class="card-panel registration-form">
             <!-- Enter Username -->
             <div class="row">
-                <div class="input-field col s10 offset-s1">
+                <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-user prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="username" name="username" type="text" minlength="4" maxlength="15" 
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
