--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -4,7 +4,28 @@
     <h3 class="center-align page-title">Add New Task</h3>
 
 <div class="row card-panel add-tasks-form">
+
     <form class="col s12" method="POST" action="">
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
+                <select id="section_name" name="section_name" class="validate" required>
+                    <option value="" disabled selected>Choose Section or Whole Chorus</option>
+                    {% for section in sections %}
+                        <option value="{{ section.section_name }}">{{ section.section_name }}</option> 
+                    {% endfor %}                   
+                </select>
+                <label for="section_name">Select Section</label>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="far fa-calendar-alt prefix pink-text text-accent-1"></i>
+                <input id="due_date" name ="due_date" type="text" class="datepicker validate" required>
+                <label for="due_date">Due Date</label>
+            </div>
+        </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-music prefix pink-text text-accent-1"></i>
@@ -14,18 +35,12 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
+                <i class="far fa-file-alt prefix pink-text text-accent-1"></i>
                 <input id="task_title" name ="task_title" type="text" class="validate" required>
                 <label for="task_title">Task Title</label>
             </div>
         </div>
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="fas fa-calendar-alt prefix pink-text text-accent-1"></i>
-                <input id="due_date" name ="due_date" type="text" class="datepicker validate" required>
-                <label for="due_date">Due Date</label>
-            </div>
-        </div>
+        
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix pink-text text-accent-1"></i>
