Allow user to submit new homework tasks to DB

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,10 @@ header a:hover {
     font-size: 15px !important;
 }
 
+.task-set-by {
+    font-size:12px !important;
+}
+
 /* Add task form */
 
 .add-tasks-form {
