--- a/templates/register.html
+++ b/templates/register.html
@@ -29,7 +29,7 @@
 
             <!--Register User Button-->
             <div class="row">
-                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 text-shadow submit-button">Register</button>
+                <button type="submit" class="col s4 offset-s4 btn-large pink accent-1 submit-button">Register</button>
             </div>
         </div>
     </form>
