--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -5,7 +5,8 @@
 
 <div class="row card-panel add-tasks-form">
 
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+        <!--Section selection-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-microphone prefix pink-text text-accent-1"></i>
@@ -20,12 +21,14 @@
 
         </div>
         <div class="row">
+            <!--Due Date Picker-->
             <div class="input-field col s12">
                 <i class="far fa-calendar-alt prefix pink-text text-accent-1"></i>
                 <input id="due_date" name ="due_date" type="text" class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
             </div>
         </div>
+        <!--Song Name-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-music prefix pink-text text-accent-1"></i>
@@ -33,6 +36,7 @@
                 <label for="song_name">Song Name</label>
             </div>
         </div>
+        <!--Task Title-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="far fa-file-alt prefix pink-text text-accent-1"></i>
@@ -40,7 +44,7 @@
                 <label for="task_title">Task Title</label>
             </div>
         </div>
-        
+        <!--Task Description-->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix pink-text text-accent-1"></i>
@@ -48,7 +52,14 @@
                 required></textarea><label for="task_description">Details of Task</label>
             </div>
         </div>
-        
+        <!--Submit Button-->
+        <div class="row">
+            <div class="col s4 offset-s4 ">
+                <button type="submit" class="btn-large pink accent-1 submit-button">
+                    Submit New Task 
+                </button>
+            </div>
+        </div>
     </form>
 </div>
 
