--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,21 @@ header a:hover {
     font-size:12px !important;
 }
 
+.btn-small {
+    position: relative;
+    margin-top: 100px;
+    color: #616161;
+    
+}
+
+.done-button {
+    margin-right: 50px;
+}
+
+.edit-button {
+    margin-left: 50px;
+}
+
 /* Add task form */
 
 .add-tasks-form {
@@ -126,6 +141,8 @@ header a:hover {
     border-width: 1px;
     border-style:solid;
 }
+
+
 
 /* Media Queries */
 
