--- a/templates/leads.html
+++ b/templates/leads.html
@@ -14,6 +14,8 @@
             <div class="card-title activator card-content center-align"><i class="fas fa-music"></i>
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
+                <a href="" class="btn-small submit-button done-button white">Done</a>    
+                <a href="" class="btn-small submit-button edit-button white">Edit</a> 
             </div>
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
