--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -13,7 +13,11 @@
                 <select id="section_name" name="section_name" class="validate" required>
                     <option value="" disabled selected>Choose Section or Whole Chorus</option>
                     {% for section in sections %}
-                        <option value="{{ section.section_name }}">{{ section.section_name }}</option> 
+                        {% if homework.section_name == homework.section_name %}
+                            <option value="{{ section.section_name }}" selected>{{ section.section_name }}</option>
+                        {% else %}
+                            <option value="{{ section.section_name }}">{{ section.section_name }}</option> 
+                        {% endif %}
                     {% endfor %}                   
                 </select>
                 <label for="section_name">Select Section</label>
@@ -24,7 +28,8 @@
             <!--Due Date Picker-->
             <div class="input-field col s12">
                 <i class="far fa-calendar-alt prefix pink-text text-accent-1"></i>
-                <input id="due_date" name ="due_date" type="text" class="datepicker validate" required>
+                <input id="due_date" name ="due_date" type="text" value="{{ homework.due_date }}" 
+                class="datepicker validate" required>
                 <label for="due_date">Due Date</label>
             </div>
         </div>
@@ -32,7 +37,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-music prefix pink-text text-accent-1"></i>
-                <input id="song_name" name ="song_name" type="text" class="validate" required>
+                <input id="song_name" name ="song_name" value="{{ homework.song_name }}" type="text" 
+                class="validate" required>
                 <label for="song_name">Song Name</label>
             </div>
         </div>
@@ -40,7 +46,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="far fa-file-alt prefix pink-text text-accent-1"></i>
-                <input id="task_title" name ="task_title" type="text" class="validate" required>
+                <input id="task_title" name ="task_title" value="{{ homework.task_title }}"type="text" 
+                class="validate" required>
                 <label for="task_title">Task Title</label>
             </div>
         </div>
@@ -49,14 +56,20 @@
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix pink-text text-accent-1"></i>
                 <textarea id="task_description" name="task_description" class="materialize-textarea validate" 
-                required></textarea><label for="task_description">Details of Task</label>
+                required>
+                {{- homework.task_description -}}
+            </textarea>
+            <label for="task_description">Details of Task</label>
             </div>
         </div>
         <!--Submit Button-->
         <div class="row">
             <div class="col s4 offset-s4 ">
+                <!--Cancel changes button-->
+                <a href="{{ url_for('homework') }}" class="btn-large red submit-button">Cancel</a>
+                <!--Submit changes button-->
                 <button type="submit" class="btn-large pink accent-1 submit-button">
-                    Edit Task 
+                    Save Changes 
                 </button>
             </div>
         </div>
