--- a/templates/leads.html
+++ b/templates/leads.html
@@ -14,8 +14,10 @@
             <div class="card-title activator card-content center-align"><i class="fas fa-music"></i>
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
+                {% if session.user|lower == homework.created_by|lower %}
                 <a href="" class="btn-small submit-button done-button white">Done</a>    
                 <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small submit-button edit-button white">Edit</a> 
+                {% endif %}
             </div>
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
