--- a/templates/leads.html
+++ b/templates/leads.html
@@ -15,7 +15,7 @@
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
                 {% if session.user|lower == homework.created_by|lower %}
-                <a href="" class="btn-small submit-button done-button white">Done</a>    
+                <a href="{{ url_for('delete_task', homework_id=homework._id) }}" class="btn-small submit-button done-button white">Done</a>    
                 <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small submit-button edit-button white">Edit</a> 
                 {% endif %}
             </div>
