--- a/templates/leads.html
+++ b/templates/leads.html
@@ -9,15 +9,18 @@
 <div class="row">
     
     {% for homework in homework %}
+    
     <div class="col s10 offset-s1 m6 l4">
         <div class="card white-text pink accent-1">
             <div class="card-title activator card-content center-align"><i class="fas fa-music"></i>
                 {{ homework.song_name }}<br>
                 Due Date: {{ homework.due_date }}
-                {% if session.user|lower == homework.created_by|lower %}
-                <a href="{{ url_for('delete_task', homework_id=homework._id) }}" class="btn-small submit-button done-button white">Done</a>    
-                <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small submit-button edit-button white">Edit</a> 
-                {% endif %}
+                
+                    {% if users.is_musicteam == "on" %}
+                        <a href="{{ url_for('delete_task', homework_id=homework._id) }}" class="btn-small submit-button done-button white">Done</a>    
+                        <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small submit-button edit-button white">Edit</a> 
+                    {% endif %}
+                
             </div>
             <div class="card-reveal">
                 <div class="card-title grey-text text-darken-4">{{ homework.song_name }}<i
