--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
                 <div class="input-field registration-form col s10 offset-s1">
                     <i class="fas fa-lock prefix pink-text text-accent-1 text-shadow"></i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15" 
-                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password (minimum 8 characters)" required>
+                        pattern="^[a-zA-Z0-9]{5,}$" class="validate" placeholder="Enter Password" required>
                     
                 </div>
             </div>
