--- a/templates/homework.html
+++ b/templates/homework.html
@@ -5,17 +5,17 @@
     
     <div class="row">
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('musicteam_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Music Team
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('wholechorus_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Whole Chorus
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('tenor_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Tenor Section
             </div></a>
         </div>
@@ -25,12 +25,12 @@
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('bari_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Bari Section
             </div></a>
         </div>
         <div class="col s12 m6 l4">
-            <a href="#"><div class="card-panel pink accent-1 section-link">
+            <a href="{{ url_for('bass_tasks') }}"><div class="card-panel pink accent-1 section-link">
                 Bass Section
             </div></a>
         </div>
