--- a/templates/wholechorus.html
+++ b/templates/wholechorus.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align page-title">Leads' Tasks</h3>
+<h3 class="center-align page-title">Whole Chorus Tasks</h3>
 <div class="center-align">All tasks have been set by either Lucy or your section lead, just click on the song title for more info. Please give us a shout if there's
     anything you're unsure of!</div>
 
@@ -9,7 +9,7 @@
 <div class="row">
     
     {% for homework in homework %}
-    {% if homework.section_name|lower == "lead"|lower %}
+    {% if homework.section_name|lower == "whole chorus"|lower %}
     
     <div class="col s10 offset-s1 m6 l4">
         <div class="card white-text pink accent-1">
@@ -18,8 +18,8 @@
                 Due Date: {{ homework.due_date }}
                 
                     {% if users.is_musicteam == "on" %}
-                        <a href="{{ url_for('delete_task', homework_id=homework._id) }}" class="btn-small form-button done-button white">Done</a>    
-                        <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small form-button edit-button white">Edit</a> 
+                        <a href="{{ url_for('delete_task', homework_id=homework._id) }}" class="btn-small submit-button done-button white">Done</a>    
+                        <a href="{{ url_for('edit_task', homework_id=homework._id) }}" class="btn-small submit-button edit-button white">Edit</a> 
                     {% endif %}
                 
             </div>
